@@ -1,4 +1,6 @@
 - decrease total package count when some files are missing
+- fix installing a package if user acks bogus signature
+  (regression introduced in 7.0)
 
 Version 7.3 - 24 August 2012
 
